# Thorlabs_MDT

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MDTControlGUI.py  MDTControlGUI.py.backup  MDT_COMMAND_LIB.py  MDT_COMMAND_LIB_LOCAL.py  PUBLIC_RELEASE_CHECKLIST.md  QUICKSTART.md  README.md  README_MDT.md  connect_mdt.py  discover_mdt_functions.py  find_MDT_devices.py  mdt693_llb_strings.txt  mdt_command_discovery_results.json  mdt_controller.py  mdt_controller.py.backup  mdt_devices.example.json  mdt_devices.json  mdt_probe.json  mdt_working_commands_results.json  measure_com10.py  probe_mdt693a_from_llb.py  probe_mdt693a_results.txt  probe_mdt693a_results_clean.txt  pyproject.toml  requirements.txt  run_gui_debug.py  simple_mdt_test.py  test_alt_commands.py  test_com10_diagnostic.py  test_mdt693a_manual_commands.py  test_mdt693a_manual_results_clean.txt  test_mdt_controllers.py  test_mdt_sdk.py  test_mdt_serial_commands.py  test_mdt_working_commands.py  test_shortform_results.txt  (+6 more)
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.mdt_dlls/: LabViewlibMDT693.llb
.mdt_dlls/License_V2.4.2/License/: README.txt
docs/: HISTORY_REWRITE.md  requirements.md
examples/: README.md  basic_control.py  multi_axis.py  voltage_scanning.py
src/mdt/: MDT_COMMAND_LIB.py  MDT_COMMAND_LIB_LOCAL.py  __init__.py  controller.py  discovery.py  gui.py  utils.py
